# InsightOps

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initialize_schema.py  0002_create_identity_and_saas_schema.py  0003_create_commerce_schema.py  0004_create_marketing_schema.py
benchmarks/m1_2a/: baseline_1.0.0_index.json  baseline_delta_1.0.0_to_1.1.0.json  cases.json
benchmarks/m1_2a/expected/: GQ-COM-001.json  (+27 more)
docker/mysql/: bootstrap-readonly.sh
docs/: architecture.md  business-definitions-v1.md  data-domain-design.md  evaluation-strategy.md  m1-gold-question-catalog.md  m1-logical-data-model.md  m1-physical-data-model.md  product-spec.md
docs/plans/: m0-project-foundation.md  m1-1b-identity-saas-schema.md  m1-1c-commerce-schema.md  m1-1d-marketing-schema.md  m1-2a-seed-benchmark-foundation.md  m1-2b-deterministic-sql-evaluation-harness.md  m1-3-text2sql-demo.md  m1-4-react-demo-ui.md
evaluations/m1_2b/: suite.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
scripts/: build_m1_2a_baseline_index.py  build_m1_2a_delta_report.py  build_m1_2a_expected.py  build_m1_2a_v1_1_catalog.py  build_m1_2a_v1_1_seed.py
src/insightops/: __init__.py  app.py  canonical.py  frontend.py  main.py
tests/integration/: test_frontend.py  test_health.py
tests/unit/: test_canonical.py  test_config.py  test_database.py  test_frontend_security.py
(+121 files in other folders)
